# craken-atlassian

./: .gitignore  .mcp.json  README.ko.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
skills/marklas/: SKILL.md  format.md
skills/marklas-editing/: SKILL.md
src/atlassian/: __init__.py  __main__.py  config.py  files.py  hooks.py  server.py
src/atlassian/confluence/: client.py  tools.py
src/atlassian/confluence/schema/: adf.py  analytics.py  ancestor.py  attachment.py  base.py  blog_post.py  comment.py  inline_comment.py  label.py  page.py  search.py  space.py  task.py  user.py  version.py
src/atlassian/jira/: client.py  permissions.py  tools.py
src/atlassian/jira/schema/: adf.py  attachment.py  base.py  board.py  changelog.py  comment.py  common.py  component.py  epic.py  field.py  issue.py  issue_link.py  issue_type_meta.py  label.py  link_type.py  permission.py  project.py  remote_link.py  sprint.py  transition.py  user.py  version.py  watcher.py  worklog.py
tests/: conftest.py  support.py
tests/atlassian/: test_config.py  test_files.py  test_hooks.py  test_server.py
tests/atlassian/confluence/: test_client.py  test_schema.py  test_tools.py
tests/atlassian/jira/: test_client.py  test_permissions.py  test_schema.py  test_tools.py
