[project]
name = "atlassian"
version = "0.1.2"
requires-python = ">=3.13"
dependencies = [
    "marklas>=0.8.0",
    "mcp>=1.26.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/atlassian"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib --cov=atlassian --cov-report=term-missing"
pythonpath = ["tests"]

[tool.coverage.run]
source = ["atlassian"]
omit = ["*/__main__.py"]  # entrypoint: from atlassian.server import mcp; mcp.run()

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pyright]
include = ["src", "tests"]
# Resolve `atlassian` to the local source (not the unstubbed installed wheel)
# and `support`/`conftest` for tests; keeps strict from flagging missing stubs.
extraPaths = ["src", "tests"]
typeCheckingMode = "strict"

# Tests legitimately reach into white-box internals (e.g. mcp._tool_manager,
# the confluence client's _parse helpers), which is the one strict rule that
# does not fit test code; everything else stays strict.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
